tests/regression/errors/basic/import_error_17.csd
// Import error test 17
yeet "nonexistent_module_17"
sus result drip = some_function(17)
